fix:h1 spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ header {
   text-decoration: underline overline #de721f;
   font-size:2.5vh;
   font-weight:300;
-  letter-spacing:0.5rem;
+  letter-spacing:0.3rem;
 }
 
 
